Remove ix-icons lib.

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -15,9 +15,9 @@
   <div style="display: flex; flex-direction: row;">
     <div style="background-color:white; padding: 15px">
       <span style="display: block; margin-bottom: 25px;">light background</span>
-      <inno-button variant="cta">cta button <ix-icon name="star"></ix-icon></inno-button>
+      <inno-button variant="cta">cta button <inno-icon icon="star" size="24"></inno-icon></inno-button>
       <inno-button variant="primary">primary button</inno-button>
-      <inno-button variant="secondary">secondary button <ix-icon name="arrow-diagonal-top-right"></ix-icon></inno-button>
+      <inno-button variant="secondary">secondary button <inno-icon icon="arrow-diagonal-top-right" size="24"></inno-icon></inno-button>
       <inno-button variant="tertiary">tertiary button</inno-button>
     </div>
     <div style="background-color:#E1F000; padding: 15px">
@@ -25,7 +25,7 @@
       <inno-button variant="cta" parent-background-color="light-highlight">cta button</inno-button>
       <inno-button variant="primary" parent-background-color="light-highlight">primary button</inno-button>
       <inno-button variant="secondary" parent-background-color="light-highlight">secondary button</inno-button>
-      <inno-button variant="tertiary" parent-background-color="light-highlight">tertiary button <ix-icon name="arrow-right"></ix-icon></inno-button>
+      <inno-button variant="tertiary" parent-background-color="light-highlight">tertiary button <inno-icon icon="arrow-right" size="24"></inno-icon></inno-button>
     </div>
     <div style="background-color:#08191F; padding: 15px">
       <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
@@ -44,8 +44,8 @@
   </div>
   <h1>media buttons</h1>
   <div style="display: flex; flex-direction: row; gap: 40px;">
-    <inno-button variant="media"><ix-icon name="search" style="width: 40px; height: 40px;"></ix-icon></inno-button>
-    <inno-button variant="media" disabled><ix-icon name="search" style="width: 40px; height: 40px;"></ix-icon></inno-button>
+    <inno-button variant="media"><inno-icon icon="search" size="32"></inno-icon></inno-button>
+    <inno-button variant="media" disabled><inno-icon icon="search" size="32"></inno-icon></inno-button>
   </div>
   <h1>navigation buttons</h1>
   <div style="display: flex; flex-direction: row; gap: 40px;">
