fixing inno-icon style

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -8,10 +8,13 @@
 
   <script type="module" src="/build/innomotics-ix.esm.js"></script>
   <script nomodule src="/build/innomotics-ix.js"></script>
+  <link href="/styles/innomoticsHaffer.css" rel="stylesheet" />
+  <link href="/styles/innomoticsIcons.css" rel="stylesheet" />
 </head>
 
 <body>
   <h1>regular buttons</h1>
+  <inno-icon icon="star" size="24"></inno-icon>
   <div style="display: flex; flex-direction: row;">
     <div style="background-color:white; padding: 15px">
       <span style="display: block; margin-bottom: 25px;">light background</span>
