--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -8,8 +8,7 @@
 
   <script type="module" src="/build/innomotics-ix.esm.js"></script>
   <script nomodule src="/build/innomotics-ix.js"></script>
-  <link href="/styles/innomoticsHaffer.css" rel="stylesheet" />
-  <link href="/styles/innomoticsIcons.css" rel="stylesheet" />
+  <link href="/build/innomotics-ix.css" rel="stylesheet" />
 </head>
 
 <body>
