breadcrumb style alignment

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -49,6 +49,11 @@
     <inno-button variant="navigation">&lt;</inno-button>
     <inno-button variant="navigation" disabled>&gt;</inno-button>
   </div>
+  <h1>breadcrumb</h1>
+  <inno-breadcrumb>
+    <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
+    <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
+  </inno-breadcrumb>
 </body>
 
 </html>
