very stupid floating label input

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -66,6 +66,7 @@
     <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
     <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
   </inno-breadcrumb>
+  <inno-input></inno-input>
 </body>
 
 </html>
