--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -12,55 +12,98 @@
 </head>
 
 <body>
-  <h1>regular buttons</h1>
-  <div style="display: flex; flex-direction: row;">
-    <div style="background-color:white; padding: 15px">
-      <span style="display: block; margin-bottom: 25px;">light background</span>
-      <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
-      <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
-      <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
-      <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
-      <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
-      <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
+  <inno-button id="button-showcase-toggle" variant="primary">right pane (with buttons)</inno-button>
+  <inno-button id="left-toggle" variant="primary">left pane</inno-button>
+  <inno-button id="top-toggle" variant="primary">top pane</inno-button>
+  <inno-button id="bottom-toggle" variant="primary">bottom pane</inno-button>
+  <inno-pane id="button-showcase" title-text="Button showcase" close-on-backdrop-click="true" pane-size="1100px">
+    <div>
+      <h1>regular buttons</h1>
+      <div style="display: flex; flex-direction: row;">
+        <div style="background-color:white; padding: 15px">
+          <span style="display: block; margin-bottom: 25px; color: black;">light background</span>
+          <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
+          <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
+          <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
+          <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
+          <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
+          <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
+        </div>
+        <div style="background-color:#08191F; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
+          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right">primary button</inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right">secondary
+            button</inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right">tertiary
+            button</inno-button>
+          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
+        </div>
+        <div style="background-color: white; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: black;">disabled light background</span>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
+        </div>
+        <div style="background-color: #08191F; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: white;">disabled dark background</span>
+          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">primary button</inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">secondary button</inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">tertiary button</inno-button>
+          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
+        </div>
+      </div>
+      <h1>media buttons</h1>
+      <div style="display: flex; flex-direction: row; gap: 40px;">
+        <inno-button variant="media" icon="search"></inno-button>
+        <inno-button variant="media" icon="search" disabled></inno-button>
+      </div>
+      <h1>navigation buttons</h1>
+      <div style="display: flex; flex-direction: row; gap: 40px;">
+        <inno-button variant="navigation" nav-direction="left"></inno-button>
+        <inno-button variant="navigation" disabled></inno-button>
+      </div>
     </div>
-    <div style="background-color:#08191F; padding: 15px">
-      <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
-      <inno-button variant="primary" parent-background-color="dark" icon="arrow-right">primary button</inno-button>
-      <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right">secondary button</inno-button>
-      <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right">tertiary button</inno-button>
-      <inno-button variant="primary" parent-background-color="dark" icon="arrow-right" icon-only="true"></inno-button>
-      <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right" icon-only="true"></inno-button>
-      <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right" icon-only="true"></inno-button>
-    </div>
-    <div style="background-color: white; padding: 15px">
-      <span style="display: block;margin-bottom: 25px;">disabled light background</span>
-      <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
-      <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
-      <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
-      <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
-      <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
-      <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
-    </div>
-    <div style="background-color: #08191F; padding: 15px">
-      <span style="display: block;margin-bottom: 25px; color: white;">disabled dark background</span>
-      <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
-      <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
-      <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
-      <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel" icon-only="true"></inno-button>
-      <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel" icon-only="true"></inno-button>
-      <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel" icon-only="true"></inno-button>
-    </div>
-  </div>
-  <h1>media buttons</h1>
-  <div style="display: flex; flex-direction: row; gap: 40px;">
-    <inno-button variant="media" icon="search"></inno-button>
-    <inno-button variant="media" icon="search" disabled></inno-button>
-  </div>
-  <h1>navigation buttons</h1>
-  <div style="display: flex; flex-direction: row; gap: 40px;">
-    <inno-button variant="navigation" nav-direction="left"></inno-button>
-    <inno-button variant="navigation" disabled></inno-button>
-  </div>
+  </inno-pane>
+  <inno-pane id="left-pane" title-text="Left pane" close-on-backdrop-click="true" pane-size="500px" position="left">
+    <p style="color: white">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, 
+      ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. 
+      Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, 
+      elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. 
+      Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, 
+      tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+  </inno-pane>
+  <inno-pane id="top-pane" title-text="Top pane" close-on-backdrop-click="true" pane-size="500px" position="top">
+    <p style="color: white">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, 
+      ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. 
+      Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, 
+      elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. 
+      Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, 
+      tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+  </inno-pane>
+  <inno-pane id="bottom-pane" title-text="Bottom pane" close-on-backdrop-click="true" pane-size="500px" position="bottom">
+    <p style="color: white">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, 
+      ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. 
+      Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, 
+      elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. 
+      Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, 
+      tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+  </inno-pane>
   <h1>breadcrumb</h1>
   <inno-breadcrumb>
     <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
@@ -68,5 +111,34 @@
   </inno-breadcrumb>
   <inno-input></inno-input>
 </body>
+<script>
+  const pane1 = document.getElementById("button-showcase");
+  const button1 = document.getElementById("button-showcase-toggle");
+
+  button1.addEventListener("click", () => {
+    pane1.expanded = pane1.expanded ? undefined : true
+  });
+
+  const pane2 = document.getElementById("left-pane");
+  const button2 = document.getElementById("left-toggle");
+
+  button2.addEventListener("click", () => {
+    pane2.expanded = pane2.expanded ? undefined : true
+  });
+
+  const pane3 = document.getElementById("top-pane");
+  const button3 = document.getElementById("top-toggle");
+
+  button3.addEventListener("click", () => {
+    pane3.expanded = pane1.expanded ? undefined : true
+  });
+
+  const pane4 = document.getElementById("bottom-pane");
+  const button4 = document.getElementById("bottom-toggle");
+
+  button4.addEventListener("click", () => {
+    pane4.expanded = pane1.expanded ? undefined : true
+  });
+</script>
 
 </html>
