--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -109,7 +109,7 @@
     <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
     <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
   </inno-breadcrumb>
-  <inno-input></inno-input>
+  <inno-input label="Power"></inno-input>
 </body>
 <script>
   const pane1 = document.getElementById("button-showcase");
