--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -12,72 +12,23 @@
 </head>
 
 <body>
-  <inno-button id="button-showcase-toggle" variant="primary">right pane (with buttons)</inno-button>
-  <inno-button id="left-toggle" variant="primary">left pane</inno-button>
-  <inno-button id="top-toggle" variant="primary">top pane</inno-button>
-  <inno-button id="bottom-toggle" variant="primary">bottom pane</inno-button>
-  <inno-pane id="button-showcase" title-text="Button showcase" close-on-backdrop-click="true" pane-size="1100px">
-    <div>
-      <h1>regular buttons</h1>
-      <div style="display: flex; flex-direction: row;">
-        <div style="background-color:white; padding: 15px">
-          <span style="display: block; margin-bottom: 25px; color: black;">light background</span>
-          <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
-          <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
-          <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
-          <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
-          <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
-          <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
-        </div>
-        <div style="background-color:#08191F; padding: 15px">
-          <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
-          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right">primary button</inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right">secondary
-            button</inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right">tertiary
-            button</inno-button>
-          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right"
-            icon-only="true"></inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right"
-            icon-only="true"></inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right"
-            icon-only="true"></inno-button>
-        </div>
-        <div style="background-color: white; padding: 15px">
-          <span style="display: block;margin-bottom: 25px; color: black;">disabled light background</span>
-          <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
-          <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
-          <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
-          <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
-          <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
-          <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
-        </div>
-        <div style="background-color: #08191F; padding: 15px">
-          <span style="display: block;margin-bottom: 25px; color: white;">disabled dark background</span>
-          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-position="left">primary button</inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-position="left">secondary button</inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-position="left">tertiary button</inno-button>
-          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-only="true"></inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-only="true"></inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
-            icon-only="true"></inno-button>
-        </div>
-      </div>
-      <h1>media buttons</h1>
-      <div style="display: flex; flex-direction: row; gap: 40px;">
-        <inno-button variant="media" icon="search"></inno-button>
-        <inno-button variant="media" icon="search" disabled></inno-button>
-      </div>
-      <h1>navigation buttons</h1>
-      <div style="display: flex; flex-direction: row; gap: 40px;">
-        <inno-button variant="navigation" nav-direction="left"></inno-button>
-        <inno-button variant="navigation" disabled></inno-button>
-      </div>
+  <h1>regular buttons</h1>
+  <inno-icon icon="star" size="24"></inno-icon>
+
+  <inno-accordion variant="light" label="Example">asd</inno-accordion>
+  <inno-accordion variant="light" collapsed={true} label="Example2">asd2</inno-accordion>
+  <inno-accordion variant="light" collapsed={true} label="Example3">asd3</inno-accordion>
+  <inno-accordion variant="dark" label="Example">asd</inno-accordion>
+  <inno-accordion variant="dark" collapsed={true} label="Example2">asd2</inno-accordion>
+  <inno-accordion variant="dark" collapsed={true} label="Example3">asd3</inno-accordion>
+
+  <div style="display: flex; flex-direction: row;">
+    <div style="background-color:white; padding: 15px">
+      <span style="display: block; margin-bottom: 25px;">light background</span>
+      <inno-button variant="cta">cta button <inno-icon icon="star" size="24"></inno-icon></inno-button>
+      <inno-button variant="primary">primary button</inno-button>
+      <inno-button variant="secondary">secondary button <inno-icon icon="arrow-diagonal-top-right" size="24"></inno-icon></inno-button>
+      <inno-button variant="tertiary">tertiary button</inno-button>
     </div>
   </inno-pane>
   <inno-pane id="left-pane" title-text="Left pane" close-on-backdrop-click="true" pane-size="500px" position="left">
