--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -78,15 +78,43 @@
           <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
           <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
         </div>
-        <h1>media buttons</h1>
-        <div style="display: flex; flex-direction: row; gap: 40px">
-          <inno-button variant="media" icon="search"></inno-button>
-          <inno-button variant="media" icon="search" disabled></inno-button>
+        <div style="background-color:#08191F; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
+          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right">primary button</inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right">secondary
+            button</inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right">tertiary
+            button</inno-button>
+          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right"
+            icon-only="true"></inno-button>
         </div>
-        <h1>navigation buttons</h1>
-        <div style="display: flex; flex-direction: row; gap: 40px">
-          <inno-button variant="navigation" nav-direction="left"></inno-button>
-          <inno-button variant="navigation" disabled></inno-button>
+        <div style="background-color: white; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: black;">disabled light background</span>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
+        </div>
+        <div style="background-color: #08191F; padding: 15px">
+          <span style="display: block;margin-bottom: 25px; color: white;">disabled dark background</span>
+          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">primary button</inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">secondary button</inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-position="left">tertiary button</inno-button>
+          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
+          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
+          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+            icon-only="true"></inno-button>
         </div>
       </div>
       <h1>media buttons</h1>
