--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -61,59 +61,59 @@
   <inno-accordion variant="dark" label="Example">asd</inno-accordion>
   <inno-accordion variant="dark" collapsed="{true}" label="Example2">asd2</inno-accordion>
   <inno-accordion variant="dark" collapsed="{true}" label="Example3">asd3</inno-accordion>
-  <inno-button id="button-showcase-toggle" variant="primary">right pane (with buttons)</inno-button>
-  <inno-button id="left-toggle" variant="primary">left pane</inno-button>
-  <inno-button id="top-toggle" variant="primary">top pane</inno-button>
-  <inno-button id="bottom-toggle" variant="primary">bottom pane</inno-button>
+  <inno-button id="button-showcase-toggle" variant="primary" color-variant="dark">right pane (with buttons)</inno-button>
+  <inno-button id="left-toggle" variant="primary" color-variant="dark">left pane</inno-button>
+  <inno-button id="top-toggle" variant="primary" color-variant="dark">top pane</inno-button>
+  <inno-button id="bottom-toggle" variant="primary" color-variant="dark">bottom pane</inno-button>
   <inno-pane id="button-showcase" title-text="Button showcase" close-on-backdrop-click="false" pane-size="1100px">
     <div>
       <h1>regular buttons</h1>
       <div style="display: flex; flex-direction: row;">
         <div style="background-color:white; padding: 15px">
           <span style="display: block; margin-bottom: 25px; color: black;">light background</span>
-          <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
-          <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
-          <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
-          <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
-          <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
-          <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
+          <inno-button variant="primary" icon="arrow-right" color-variant="dark">primary button</inno-button>
+          <inno-button variant="secondary" icon="arrow-right" color-variant="dark">secondary button</inno-button>
+          <inno-button variant="tertiary" icon="arrow-right" color-variant="dark">tertiary button</inno-button>
+          <inno-button variant="primary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
+          <inno-button variant="secondary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
+          <inno-button variant="tertiary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
         </div>
         <div style="background-color:#08191F; padding: 15px">
           <span style="display: block;margin-bottom: 25px; color: white;">dark background</span>
-          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right">primary button</inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right">secondary
+          <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
+          <inno-button variant="secondary" icon="arrow-right">secondary
             button</inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right">tertiary
+          <inno-button variant="tertiary" icon="arrow-right">tertiary
             button</inno-button>
-          <inno-button variant="primary" parent-background-color="dark" icon="arrow-right"
+          <inno-button variant="primary" icon="arrow-right"
             icon-only="true"></inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" icon="arrow-right"
+          <inno-button variant="secondary" icon="arrow-right"
             icon-only="true"></inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" icon="arrow-right"
+          <inno-button variant="tertiary" icon="arrow-right"
             icon-only="true"></inno-button>
         </div>
         <div style="background-color: white; padding: 15px">
           <span style="display: block;margin-bottom: 25px; color: black;">disabled light background</span>
-          <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
-          <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
-          <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
-          <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
-          <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
-          <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-position="left" color-variant="dark">primary button</inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left" color-variant="dark">secondary button</inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left" color-variant="dark">tertiary button</inno-button>
+          <inno-button variant="primary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+          <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+          <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
         </div>
         <div style="background-color: #08191F; padding: 15px">
           <span style="display: block;margin-bottom: 25px; color: white;">disabled dark background</span>
-          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="primary" disabled icon="cogwheel"
             icon-position="left">primary button</inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="secondary" disabled icon="cogwheel"
             icon-position="left">secondary button</inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="tertiary" disabled icon="cogwheel"
             icon-position="left">tertiary button</inno-button>
-          <inno-button variant="primary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="primary" disabled icon="cogwheel"
             icon-only="true"></inno-button>
-          <inno-button variant="secondary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="secondary" disabled icon="cogwheel"
             icon-only="true"></inno-button>
-          <inno-button variant="tertiary" parent-background-color="dark" disabled icon="cogwheel"
+          <inno-button variant="tertiary" disabled icon="cogwheel"
             icon-only="true"></inno-button>
         </div>
       </div>
