--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -56,12 +56,12 @@
       tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
   </inno-popover>
   <inno-accordion variant="light" label="Example">asd</inno-accordion>
-  <inno-accordion variant="light" collapsed="{true}" label="Example2">asd2</inno-accordion>
-  <inno-accordion variant="light" collapsed="{true}" label="Example3" last="last">asd3</inno-accordion>
+  <inno-accordion variant="light" collapsed label="Example2">asd2</inno-accordion>
+  <inno-accordion variant="light" collapsed label="Example3" last>asd3</inno-accordion>
   <br><br><br>
   <inno-accordion variant="dark" label="Example">asd</inno-accordion>
-  <inno-accordion variant="dark" collapsed="{true}" label="Example2">asd2</inno-accordion>
-  <inno-accordion variant="dark" collapsed="{true}" label="Example3" last="last">asd3</inno-accordion>
+  <inno-accordion variant="dark" collapsed label="Example2">asd2</inno-accordion>
+  <inno-accordion variant="dark" collapsed label="Example3" last>asd3</inno-accordion>
   <inno-button id="button-showcase-toggle" variant="primary" color-variant="dark">right pane (with buttons)</inno-button>
   <inno-button id="left-toggle" variant="primary" color-variant="dark">left pane</inno-button>
   <inno-button id="top-toggle" variant="primary" color-variant="dark">top pane</inno-button>
