refactored input element

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -175,7 +175,10 @@
     <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
     <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
   </inno-breadcrumb>
-  <inno-input label="Power" variant="light"></inno-input>
+  <inno-input label="Power" variant="light">
+      <input type="number"/>
+      <inno-error type="badInput">Not valid</inno-error>
+    </inno-input>
   <inno-select label="Select">
     <inno-select-item value="124">4321</inno-select-item>
     <inno-select-item value="124321">431</inno-select-item>
