adding keyboard func to select

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -189,9 +189,9 @@
     <input type="number" />
     <inno-error type="badInput">Not valid</inno-error>
   </inno-input>
-  <inno-select label="Select">
-    <inno-select-item value="124">4321</inno-select-item>
-    <inno-select-item value="124321">431</inno-select-item>
+  <inno-select label="Select" value="124">
+    <inno-select-item value="124" label="<sub>324</sub>4321"></inno-select-item>
+    <inno-select-item value="124321" label="431"></inno-select-item>
   </inno-select>
 
   <inno-footer id="in-footer-dark" variant="dark" copyright="@ Innomotics 2024"></inno-footer>
