creating list button style property

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -194,6 +194,15 @@
     <inno-select-item value="124321" label="431"></inno-select-item>
   </inno-select>
 
+  <div style="background-color: #08191f; padding: 15px">
+    <inno-button variant="primary" icon="arrow-right" list-type>primary button</inno-button>
+    <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
+    <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
+    <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
+    <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
+    <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
+  </div>
+
   <inno-footer id="in-footer-dark" variant="dark" copyright="@ Innomotics 2024"></inno-footer>
 
   <div style="border: 1px solid black; margin: 5px">Footer separator dummy</div>
