--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Stencil Component Starter</title>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
 
+    <script type="module" src="/build/innomotics-ix.esm.js"></script>
+    <script nomodule src="/build/innomotics-ix.js"></script>
+    <link href="/build/innomotics-ix.css" rel="stylesheet" />
+
+    <style>
+      .separator-dummy {
+        border: 1px solid black;
+        margin: 5px;
+      }
+    </style>
+  </head>
     <script type="module" src="/build/innomotics-ix.esm.js"></script>
     <script nomodule src="/build/innomotics-ix.js"></script>
     <link href="/build/innomotics-ix.css" rel="stylesheet" />
@@ -173,6 +180,158 @@
       <inno-select-item value="124">4321</inno-select-item>
       <inno-select-item value="124321">431</inno-select-item>
     </inno-select>
+  <body>
+    <div style="display: flex; flex-direction: row; gap: 20px; margin-bottom: 15px">
+      <div style="display: flex; flex-direction: column; gap: 10px; padding: 10px">
+        <inno-toggle></inno-toggle>
+        <inno-toggle disabled></inno-toggle>
+      </div>
+      <div style="display: flex; flex-direction: column; gap: 10px; background-color: #08191f; padding: 10px">
+        <inno-toggle variant="light"></inno-toggle>
+        <inno-toggle variant="light" disabled></inno-toggle>
+      </div>
+    </div>
+    <span id="onclickspan" style="background-color: black; color: white">tooltip on click</span>
+    <span id="onhoverspan" style="background-color: black; color: white">tooltip on hover</span>
+    <span id="manualspan" style="background-color: black; color: white">manual tooltip, click on the button --&gt;</span>
+    <button id="manualbtn">click me!</button>
+    <inno-popover for="#onclickspan" placement="right" title-content="title">
+      <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-popover>
+    <inno-popover for="#onhoverspan" placement="bottom" trigger="hover" title-content="title" variant="light">
+      <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-popover>
+    <inno-popover id="manualpop" for="#manualspan" placement="bottom" trigger="manual" title-content="title">
+      <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-popover>
+    <br />
+    <inno-accordion variant="light" label="Example">first accordion</inno-accordion>
+    <inno-accordion variant="light" label="Example2" collapsed>
+      second accordion
+      <inno-accordion variant="light" label="Inner Label" collapsed inner>inner inner inner</inno-accordion>
+    </inno-accordion>
+    <inno-accordion variant="light" label="Example3" collapsed last>third accordion</inno-accordion>
+    <br />
+    <br />
+    <inno-accordion variant="dark" label="Example">first accordion</inno-accordion>
+    <inno-accordion variant="dark" label="Example2" collapsed> second accordion </inno-accordion>
+    <inno-accordion variant="dark" label="Example3" collapsed last>third accordion</inno-accordion>
+    <br />
+    <inno-button id="button-showcase-toggle" variant="primary" color-variant="dark">right pane (with buttons)</inno-button>
+    <inno-button id="left-toggle" variant="primary" color-variant="dark">left pane</inno-button>
+    <inno-button id="top-toggle" variant="primary" color-variant="dark">top pane</inno-button>
+    <inno-button id="bottom-toggle" variant="primary" color-variant="dark">bottom pane</inno-button>
+    <inno-pane id="button-showcase" title-text="Button showcase" close-on-backdrop-click="false" pane-size="1100px">
+      <div>
+        <h1>regular buttons</h1>
+        <div style="display: flex; flex-direction: row">
+          <div style="background-color: white; padding: 15px">
+            <span style="display: block; margin-bottom: 25px; color: black">light background</span>
+            <inno-button variant="primary" icon="arrow-right" color-variant="dark">primary button</inno-button>
+            <inno-button variant="secondary" icon="arrow-right" color-variant="dark">secondary button</inno-button>
+            <inno-button variant="tertiary" icon="arrow-right" color-variant="dark">tertiary button</inno-button>
+            <inno-button variant="primary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="secondary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="tertiary" icon="arrow-right" icon-only="true" color-variant="dark"></inno-button>
+          </div>
+          <div style="background-color: #08191f; padding: 15px">
+            <span style="display: block; margin-bottom: 25px; color: white">dark background</span>
+            <inno-button variant="primary" icon="arrow-right">primary button</inno-button>
+            <inno-button variant="secondary" icon="arrow-right">secondary button</inno-button>
+            <inno-button variant="tertiary" icon="arrow-right">tertiary button</inno-button>
+            <inno-button variant="primary" icon="arrow-right" icon-only="true"></inno-button>
+            <inno-button variant="secondary" icon="arrow-right" icon-only="true"></inno-button>
+            <inno-button variant="tertiary" icon="arrow-right" icon-only="true"></inno-button>
+          </div>
+          <div style="background-color: white; padding: 15px">
+            <span style="display: block; margin-bottom: 25px; color: black">disabled light background</span>
+            <inno-button variant="primary" disabled icon="cogwheel" icon-position="left" color-variant="dark">primary button</inno-button>
+            <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left" color-variant="dark">secondary button</inno-button>
+            <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left" color-variant="dark">tertiary button</inno-button>
+            <inno-button variant="primary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+            <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true" color-variant="dark"></inno-button>
+          </div>
+          <div style="background-color: #08191f; padding: 15px">
+            <span style="display: block; margin-bottom: 25px; color: white">disabled dark background</span>
+            <inno-button variant="primary" disabled icon="cogwheel" icon-position="left">primary button</inno-button>
+            <inno-button variant="secondary" disabled icon="cogwheel" icon-position="left">secondary button</inno-button>
+            <inno-button variant="tertiary" disabled icon="cogwheel" icon-position="left">tertiary button</inno-button>
+            <inno-button variant="primary" disabled icon="cogwheel" icon-only="true"></inno-button>
+            <inno-button variant="secondary" disabled icon="cogwheel" icon-only="true"></inno-button>
+            <inno-button variant="tertiary" disabled icon="cogwheel" icon-only="true"></inno-button>
+          </div>
+        </div>
+        <h1>media buttons</h1>
+        <div style="display: flex; flex-direction: row; gap: 40px">
+          <inno-button variant="media" icon="search"></inno-button>
+          <inno-button variant="media" icon="search" disabled></inno-button>
+        </div>
+        <h1>navigation buttons</h1>
+        <div style="display: flex; flex-direction: row; gap: 40px">
+          <inno-button variant="navigation" nav-direction="left"></inno-button>
+          <inno-button variant="navigation" disabled></inno-button>
+        </div>
+      </div>
+    </inno-pane>
+    <inno-pane id="left-pane" title-text="Left pane" close-on-backdrop-click="true" pane-size="500px" position="left">
+      <p style="color: white">
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-pane>
+    <inno-pane id="top-pane" title-text="Top pane" close-on-backdrop-click="true" pane-size="500px" position="top">
+      <p style="color: white">
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-pane>
+    <inno-pane id="bottom-pane" title-text="Bottom pane" close-on-backdrop-click="true" pane-size="500px" position="bottom">
+      <p style="color: white">
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+        Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
+        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac
+        dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+        erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+      </p>
+    </inno-pane>
+    <h1>breadcrumb</h1>
+    <inno-breadcrumb>
+      <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
+      <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
+    </inno-breadcrumb>
+    <inno-input label="Power" variant="light">
+      <input type="number" />
+      <inno-error type="badInput">Not valid</inno-error>
+    </inno-input>
+    <inno-select label="Select">
+      <inno-select-item value="124">4321</inno-select-item>
+      <inno-select-item value="124321">431</inno-select-item>
+    </inno-select>
 
     <inno-footer id="in-footer-dark" variant="dark" copyright="@ Innomotics 2024"></inno-footer>
 
@@ -181,6 +340,67 @@
     <inno-footer id="in-footer-light" variant="light" copyright="@ Innomotics 2024"></inno-footer>
 
     <div class="separator-dummy">separator dummy</div>
+
+    <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
+      <div class="inno-checkbox">
+        <input type="checkbox" id="lw1" required />
+        <label for="lw1">unchecked</label>
+      </div>
+
+      <div class="inno-checkbox">
+        <input type="checkbox" id="lw2" disabled />
+        <label for="lw2">disabled</label>
+      </div>
+
+      <div class="inno-checkbox">
+        <input type="checkbox" id="lw3" checked />
+        <label for="lw3">checked</label>
+      </div>
+
+      <div class="inno-checkbox">
+        <input type="checkbox" id="lw4" checked disabled />
+        <label for="lw4">checked disabled</label>
+      </div>
+
+      <div class="inno-checkbox">
+        <input type="checkbox" id="lw5" checked disabled />
+        <label for="lw5">indeterminate</label>
+      </div>
+    </div>
+
+    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld1" />
+        <label for="ld1">unchecked</label>
+      </div>
+
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld2" disabled />
+        <label for="ld2">disabled</label>
+      </div>
+
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld3" checked forn />
+        <label for="ld3">checked</label>
+      </div>
+
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld4" checked disabled />
+        <label for="ld4">checked disabled</label>
+      </div>
+
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld5" checked />
+        <label for="ld5">indeterminate</label>
+      </div>
+
+      <div class="inno-checkbox inno-dark">
+        <input type="checkbox" id="ld6" required />
+        <label for="ld6">unchecked</label>
+      </div>
+    </div>
+
+    <div class="separator-dummy">inno radiobutton</div>
 
     <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
       <div class="inno-radiobutton">
@@ -233,42 +453,6 @@
       <div class="inno-radiobutton inno-dark">
         <input type="radio" id="rd5" required />
         <label for="rd5">error</label>
-      </div>
-    </div>
-
-    <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
-      <div>
-        <inno-checkbox label="Label" checked="true" variant="light"></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="readonly" checked="true" variant="light" readonly></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="disabled" checked="true" variant="light" disabled></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="required" checked="true" variant="light" required></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="error" checked="true" variant="light" required class="ng-invalid"></inno-checkbox>
-      </div>
-    </div>
-
-    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
-      <div>
-        <inno-checkbox label="normal" checked="true" variant="dark"></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="readonly" checked="true" variant="dark" readonly></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="disabled" checked="true" variant="dark" disabled></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="required" checked="true" variant="dark" required></inno-checkbox>
-      </div>
-      <div>
-        <inno-checkbox label="error" checked="true" variant="dark" required class="ng-invalid"></inno-checkbox>
       </div>
     </div>
   </body>
