Add inno-checkbox v2

--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -292,6 +292,18 @@
         <label for="rd5">error</label>
       </div>
     </div>
+
+    <div style="padding: 20px; background-color: white; display: flex; flex-direction: column">
+      <div>
+        <inno-checkbox label="mylabel" checked="false" variant="light" readonly required></inno-checkbox>
+      </div>
+    </div>
+
+    <div style="padding: 20px; background-color: #08191f; display: flex; flex-direction: column">
+      <div>
+        <inno-checkbox label="mylabel" checked="true" variant="dark"></inno-checkbox>
+      </div>
+    </div>
   </body>
   <script>
     const pane1 = document.getElementById('button-showcase');
