--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -189,9 +189,16 @@
     <input type="number" />
     <inno-error type="badInput">Not valid</inno-error>
   </inno-input>
+  <inno-select label="Select" value="124" icon-driven="true">
+    <inno-select-item value="124" icon="star" label="324"></inno-select-item>
+    <inno-select-item value="124321" icon="arrow-left" label="431"></inno-select-item>
+    <inno-select-item value="12" icon="about" label="431"></inno-select-item>
+  </inno-select>
+
   <inno-select label="Select" value="124">
-    <inno-select-item value="124" label="<sub>324</sub>4321"></inno-select-item>
+    <inno-select-item value="124" label="324"></inno-select-item>
     <inno-select-item value="124321" label="431"></inno-select-item>
+    <inno-select-item value="12" label="431"></inno-select-item>
   </inno-select>
 
   <div style="background-color: #08191f; padding: 15px">
